fix: corrigir inconsistências operacionais do CloudPort
* fix: preservar senha informada no login

* fix: não alterar nem persistir senha do usuário

* feat: autenticar chamadas internas entre serviços

* feat: aplicar autenticação interna no serviço yard

* config: adicionar chave de autenticação interna

* feat: propagar credencial interna ao yard

* config: propagar chave interna ao yard

* fix: restringir ações operacionais de work queue

* fix: alinhar comando de dispatch com o frontend

* fix: padronizar resposta do dispatch de work queue

* feat: vincular work instruction à work queue

* feat: expor vínculo da work instruction com a fila

* feat: permitir vínculo explícito de ordens à work queue

* feat: persistir auditoria operacional do yard

* feat: adicionar repositório de auditoria operacional

* db: vincular ordens a filas e criar auditoria operacional

* feat: consultar ordens pela work queue persistida

* fix: persistir vínculo, auditoria e limite de dispatch

* feat: criar comando de associação de job list

* feat: expor associação explícita da job list

* feat: consultar posições reais do pátio

* fix: reservar somente posições reais e disponíveis do yard

* fix: não ocultar falhas de integração com o yard

* feat: adicionar sessão autenticada ao Control Room

* feat: enviar JWT nas chamadas do Control Room

* feat: registrar autenticação HTTP no Control Room

* feat: integrar login do Control Room ao serviço de autenticação

* feat: proteger o Control Room com tela de login

* feat: inicializar o Control Room pelo gate de autenticação

* fix: identificar usuário e correlação nas ações operacionais

* feat: configurar origem confiável para SSO do portal

* feat: integrar SSO seguro com o portal principal

* config: definir origem confiável do portal principal

* feat: integrar Control Room de navios ao portal

* feat: registrar tela integrada do Control Room

* feat: adicionar rota autenticada do Control Room de navios

* config: adicionar URL do Co